--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPage.jade
@@ -19,6 +19,7 @@ selectedId = topData.getSelectedItemId()
 .action-bar.not-transparent.buttons
     .container.panel-bg
         .left.no-border
+            -console.log(self.getDate())
             +ActionForm('attendance', 'saveFromSeatingChart').save-chart-form
                 +DatePicker('date', self.getDate())(
                     data-options={
@@ -39,38 +40,42 @@ selectedId = topData.getSelectedItemId()
             a.action-link.pressed=Msg.Seating_Chart
 div(class=showButtons ? 'can-post' : '').page-content
     seatingList = self.getSeatingList()
-    if self.getColumns() == 0 || self.getRows() == 0
-        +UpdateGridForm(Msg.Create_grid, self.getRows(), self.getColumns(), 0, 0, selectedId.valueOf())
-        .black-arrow.start=Msg.Start_by_creating_a_grid
+    if self.isScheduledInMp()
+        -console.log('1')
+        if self.getColumns() == 0 || self.getRows() == 0
+            +UpdateGridForm(Msg.Create_grid, self.getRows(), self.getColumns(), 0, 0, selectedId.valueOf())
+            .black-arrow.start=Msg.Start_by_creating_a_grid
+        else
+            +UpdateGridForm(Msg.Edit_grid, self.getRows(), self.getColumns(), self.getMinData().rows, self.getMinData().columns, selectedId.valueOf())
+            .grey-button.add-remove-students=Msg.Add_remove_students
+            .right.right-container.save-attendances-buttons
+                if showButtons
+                    BUTTON(href="javascript:", name="submitType", value="submit", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
+                    +ActionLink('attendance', 'markAll', selectedId.valueOf(), self.getDate().toStandardFormat(), false, true)#all-present-link=Msg.Mark_all_Present
+            .black-arrow.add=Msg.Add_your_students
+            .seating-chart-container
+                +LeftRightToolbar()(
+                    needDots = true,
+                    roundedDots = true,
+                    padding = 110
+                ).seating-toolbar.auto-h.big-arrows
+                    each items in seatingList
+                        .seating-row
+                            each item in items
+                                info = item.getInfo()
+                                column = item.getColumn()
+                                row = item.getRow()
+                                div(
+                                    data-index= item.getIndex(),
+                                    data-column= column,
+                                    data-row= row,
+                                    class=info ? '' : 'empty-box'
+                                ).student-block.droppable.draggable
+                                    +RenderWith(info || new chlk.models.attendance.ClassAttendance, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)
+                                if info
+                                    .empty-box.student-block.absolute
     else
-        +UpdateGridForm(Msg.Edit_grid, self.getRows(), self.getColumns(), self.getMinData().rows, self.getMinData().columns, selectedId.valueOf())
-        .grey-button.add-remove-students=Msg.Add_remove_students
-        .right.right-container.save-attendances-buttons
-            if showButtons
-                BUTTON(href="javascript:", name="submitType", value="submit", type="submit", id="submit-attendance-button").chlk-button.action-button.message-button.blue-gradient-btn POST IT
-                +ActionLink('attendance', 'markAll', selectedId.valueOf(), self.getDate().toStandardFormat(), false, true)#all-present-link=Msg.Mark_all_Present
-        .black-arrow.add=Msg.Add_your_students
-        .seating-chart-container
-            +LeftRightToolbar()(
-                needDots = true,
-                roundedDots = true,
-                padding = 110
-            ).seating-toolbar.auto-h.big-arrows
-                each items in seatingList
-                    .seating-row
-                        each item in items
-                            info = item.getInfo()
-                            column = item.getColumn()
-                            row = item.getRow()
-                            div(
-                                data-index= item.getIndex(),
-                                data-column= column,
-                                data-row= row,
-                                class=info ? '' : 'empty-box'
-                            ).student-block.droppable.draggable
-                                +RenderWith(info || new chlk.models.attendance.ClassAttendance, chlk.templates.attendance.ClassAttendanceWithSeatPlaceTpl)
-                            if info
-                                .empty-box.student-block.absolute
+        .black-arrow.no-class-scheduled Selected class is not scaduled in current Term
 typesEnum = chlk.models.attendance.AttendanceTypeEnum
 .chlk-pop-up-container.popup-top.seating-chart-popup
     .pop-up-triangle.big
