fixed Teacher. Grades. Teacher can't put codes for grades via chalkable. But via Inow he can.

--- a/Chalkable.Web/assets/jade/activities/grading/GradingAvgInput.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingAvgInput.jade
@@ -3,6 +3,7 @@ value = self.getModel().displayAvgGradeValue()
     input(name="averageValue", value=value, data-grade-value=value).avg-value.value-input
     +Hidden('averageid', self.getAverageId().valueOf())
     +Hidden('oldValue', value)
+    +Hidden('isComment').is-comment
     +Hidden('oldExempt', self.isExempt())
     +Hidden('codesString', self.getCodesString()).codes-text
     +Hidden('studentid', self.getStudentId().valueOf())
