--- a/Chalkable.Web/Views/Shared/_BasicDemoLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_BasicDemoLayout.cshtml
@@ -28,6 +28,7 @@
     @ChlkHelpers.RenderSiteRoot(Url)
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/shared.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/chlk/chlk-messages.js")"></script>
+    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/chlk-constants.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery-2.0.2.min.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.autosize-min.js")"></script>
     <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.autoresize.min.js")"></script>
