removed sms,email and grading style tab from settings

--- a/Chalkable.Web/assets/jade/activities/settings/school-person-settings-page.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/school-person-settings-page.jade
@@ -22,7 +22,7 @@ mixin SchoolPersonSettings()
             .container.panel-bg
                 block
         .general
-            .preferences
+            //.preferences
                 .block
                     .header SMS
                     .fields
