--- a/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
@@ -188,7 +188,10 @@
 			</footer>
 		</div>
 	</div>
-    
+<script type="text/javascript">
+    var _ = window.location.href.toString().match(/http?s:\/\/[^\/]+/);
+    var WEB_SITE_ROOT = _ + '@Url.Content("~/")';
+</script>
 <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery-2.0.2.min.js")"></script>
 <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery-ui.min.js")"></script>
 <script type="text/javascript" src="@Url.StaticContent("/app/jquery/validation/jquery.validationEngine.js")"></script>
