--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -327,7 +327,7 @@
             })(roleAppScript);
         </script>
     }
-    
+    @ChlkHelpers.MixPanel() 
     @RenderSection("BottomScripts", false)
     
     
