--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -1358,7 +1358,9 @@ BODY {
     }
   }
   .gp-data{
-    overflow: hidden;
+    &:not(.slided){
+      overflow: hidden;
+    }
 
     &:not(.opened){
       height: 0;
