--- a/Chalkable.Web/assets/jade/activities/announcement/AddDuplicateAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AddDuplicateAnnouncement.jade
@@ -16,5 +16,5 @@
                     .title Note:
                     .text If an application was attached, it will not be sent with the duplicate item
         .buttons-container
-            +Button()(type="submit", disabled).special-button2.blue.add.add-duplicate-btn GOT IT
-
+            +Button.special-button2.cancel.close Cancel
+            +Button()(type="submit", disabled).special-button2.blue.add.add-duplicate-btn Submit
