--- a/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
+++ b/Chalkable.Web/assets/sass/partials/main/feed/_list.scss
@@ -132,10 +132,11 @@ $star-size: 18px;
   &:not(.complete){
     .attachment{
       .animated-header, p.animated{
-        opacity: 0.7;
+        opacity: 1;
       }
     }
   }
+
 
   &.animated-item{
     DIV.item-type{
@@ -157,6 +158,11 @@ $star-size: 18px;
   }
 
   &.complete {
+    .attachment{
+      .animated-header, p.animated{
+        opacity: 0.5;
+      }
+    }
     DIV.bullet {
       a.star {
         background-position: center top;
