--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -22,7 +22,7 @@
 
     <!-- Page specific CSS -->
     @RenderSection("Styles", false)
-    @if(!Chalkable.Web.Tools.CompilerHelper.IsDebug)
+    @if (!Chalkable.Web.Tools.CompilerHelper.IsDebug)
     {
         ChlkHelpers.GoogleAnalytics();
         ChlkHelpers.Olark();
@@ -64,17 +64,20 @@
         </div>
         
          @{
-            var isDeveloperSchool = (ViewData.ContainsKey(ViewConstants.IS_DEV) && (bool)ViewData[ViewConstants.IS_DEV]);
-            var isDemoSchool = !string.IsNullOrEmpty((string)ViewData.GetValueOrNull(ViewConstants.DEMO_PREFIX_KEY));
+             var isDeveloperSchool = (ViewData.ContainsKey(ViewConstants.IS_DEV) && (bool)ViewData[ViewConstants.IS_DEV]);
+             var isDemoSchool = !string.IsNullOrEmpty((string)ViewData.GetValueOrNull(ViewConstants.DEMO_PREFIX_KEY));
+             var demoSchoolPictureDistrictRef = ViewData.GetValueOrNull(ViewConstants.DEMO_PICTURE_DISTRICT_REF);
         }
         
         
+        
+        <div id="logout-block">
         @if (!isDemoSchool && !isDeveloperSchool)
         {
-            <div id="logout-block">
-                @Html.ActionLink("Go to INOW", "RedirectToINow", "User", null, new {style = "visibility: hidden;"})
-            </div>
+            @Html.ActionLink("Go to INOW", "RedirectToINow", "User", null, new { style = "visibility: hidden;" })
         }
+        </div>
+        
 
         <div class="page 
         @if (isDemoSchool || isDeveloperSchool)
@@ -103,7 +106,8 @@
         </div>
         @if (isDemoSchool || isDeveloperSchool)
         {
-            var currentRoleId = (int) ViewData[ViewConstants.CURRENT_USER_ROLE_ID];
+            
+            var currentRoleId = (int)ViewData[ViewConstants.CURRENT_USER_ROLE_ID];
             var isDeveloper = currentRoleId == CoreRoles.DEVELOPER_ROLE.Id;
             var isTeacher = currentRoleId == CoreRoles.TEACHER_ROLE.Id;
             var isAdmin = currentRoleId == CoreRoles.ADMIN_EDIT_ROLE.Id
@@ -140,15 +144,15 @@
                 {
                     <a class="demo-role-button" rolename="Developer"><span><div class="mark left"></div><div class="mark right"></div>Developer</span></a
                 >}<a class="demo-role-button  @if (isStudent)
-                {
+                                              {
                     @:active
                 }" rolename="Student"><span><div class="mark left"></div><div class="mark right"></div>Student</span></a
                 ><a class="demo-role-button @if (isTeacher)
-                {
+                                            {
                     @:active
                 }" rolename="Teacher"><span><div class="mark left"></div><div class="mark right"></div>Teacher</span></a
                 ><a class="demo-role-button @if (isAdmin)
-                {
+                                            {
                     @:active
                 }" rolename="AdminGrade"><span><div class="mark left"></div><div class="mark right"></div>Admin</span></a
                 ><a class="demo-role-button coming" rolename="Parent"><span><span></span><div class="mark left"></div><div class="mark right"></div>Parent</span></a
@@ -277,6 +281,8 @@
             var alphaGrades = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.ALPHA_GRADES)');
             var alternateScores = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.ALTERNATE_SCORES)');
             var gradingComments = parseJsonToArray('@ViewData.GetValueOrNull(ViewConstants.GRADING_COMMMENTS)');
+            var DEMO_SCHOOL = JSON.parse('@isDemoSchool.ToString().ToLowerInvariant()');
+            var DEMO_SCHOOL_PICTURE_DISTRICT = '@demoSchoolPictureDistrictRef';
         </script>
     
     @if (Chalkable.Web.Tools.CompilerHelper.IsDebug)
