fixed demo seating chart

--- a/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPeople.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SeatingChartPeople.jade
@@ -1,4 +1,4 @@
-.seating-chart-people
+.seating-chart-people(class=self.isDemoSchool() ? "demo" : undefined)
     .x-close-btn.close-people.absolute
     .people-container
         if self.getNotSeatingStudents()
