Fixed Final Grades page

--- a/Chalkable.Web/assets/jade/activities/grading/GradingAvgInput.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingAvgInput.jade
@@ -4,7 +4,7 @@ value = self.getModel().displayAvgGradeValue()
     +Hidden('averageid', self.getAverageId().valueOf())
     +Hidden('oldValue', value)
     +Hidden('isComment').is-comment
-    +Hidden('notes', self.getNotes())
+    +Hidden('note', self.getNote())
     +Hidden('oldExempt', self.isExempt())
     +Hidden('codesString', self.getCodesString()).codes-text
     +Hidden('studentid', self.getStudentId().valueOf())
