--- a/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
@@ -10,7 +10,7 @@ div(index=self.getIndex(), class=(selected ? "selected" : ""), data-student-id=s
             .i-b.name-block
                 p= student.getFullName()
             div(id = "grade-container-" + self.getStudent().getId()).i-b.grade-block
-                +Hidden('notes', avg.getNotes())
+                +Hidden('note', avg.getNote())
                 +Hidden('averageid', avg.getAverageId().valueOf())
                 +Hidden('oldValue', value)
                 +Hidden('isComment').is-comment
@@ -115,11 +115,15 @@ div(class=(selected ? "opened" : "")).attachments-container.z-10
                 h2 Suggested Avg.
                 .grade-container
                     .grade=value
-                        .circle
-                            div(data-tooltip="The suggested grade is the system calculated average determined by your iNow settings Blah") ?
+                        if value || parseInt(value, 10) == 0
+                            .circle
+                                div(data-tooltip="The suggested grade is the system calculated average determined by your iNow settings Blah") ?
+            .disciplines-block
+                h2=Msg.Discipline
+                
         .comments-notes-block
             .notes-block
-                TEXTAREA(value=avg.getNotes()).notes-textarea
+                TEXTAREA(value=avg.getNote()).notes-textarea
                 .saving-text #{Msg.Saving.toLowerCase()}...
             .comments-block
                 each header in avg.getCodes()
