--- a/Chalkable.Web/assets/jade/controls/left-right-tb.jade
+++ b/Chalkable.Web/assets/jade/controls/left-right-tb.jade
@@ -5,7 +5,7 @@ mixin LeftRightToolbar(data, tplClass, controller, action, params)
         .A(class=configs.disablePrevButton ? configs.disabledClass : "").prev-button.arrow
         .first-container
             .second-container
-                if data
+                if data && tplClass
                     each item,i in data
                         if item.setPressed && item.getId
                             id = item.getId().valueOf();
