added HealthCondition to UI fixed Alerts in UI

--- a/Chalkable.Web/assets/jade/common/AlertsPopUpTpl.jade
+++ b/Chalkable.Web/assets/jade/common/AlertsPopUpTpl.jade
@@ -2,19 +2,23 @@
     .left-item
     .alerts-triangle
 .alerts-container
-    if self.isAllowedInetAccess()
-        .alert-item.internet
+    each item in self.getAlerts()
+        div(class= self.getCssClass(item)).alert-item
             SPAN.left-item
-            SPAN=Msg.Alert_Internet_access_text
-    if self.isWithMedicalAlert()
-        .alert-item.medical
-            SPAN.left-item
-            SPAN=Msg.Alert_Medical_text
-    if self.getSpecialInstructions()
-        .alert-item.special
-            SPAN.left-item
-            SPAN=Msg.Alert_Special_text
-    if self.getSpedStatus()
-        .alert-item.sped
-            SPAN.left-item
-            SPAN=Msg.Alert_Sped_text
+            SPAN=item.getDescription()
+//    if self.isAllowedInetAccess()
+//        .alert-item.internet
+//            SPAN.left-item
+//            SPAN=Msg.Alert_Internet_access_text
+//    if self.isWithMedicalAlert()
+//        .alert-item.medical
+//            SPAN.left-item
+//            SPAN=Msg.Alert_Medical_text
+//    if self.getSpecialInstructions()
+//        .alert-item.special
+//            SPAN.left-item
+//            SPAN=Msg.Alert_Special_text
+//    if self.getSpedStatus()
+//        .alert-item.sped
+//            SPAN.left-item
+//            SPAN=Msg.Alert_Sped_text
