--- a/Chalkable.Web/assets/jade/activities/feed/Feed.jade
+++ b/Chalkable.Web/assets/jade/activities/feed/Feed.jade
@@ -14,7 +14,7 @@ div(class = noComplete ? "no-complete" : "").feed-container
                         BUTTON.grey-button.blue-on-active.pressed.done-undone-button=Msg.Important
                         +ActionLinkButton('feed', 'list', true, false, selectedId || '', 0).grey-button.blue-on-active.done-undone-button.no-action-link-styles=Msg.All
                     else
-                        +ActionLinkButton('feed', 'list', true, true, selectedId || '', 0).grey-button.blue-on-active.done-undone-button.no-action-link-styles=Msg.Important
+                        +ActionLinkButton('feed', 'list', true, true, selectedId || '', 0).grey-button.blue-on-active.done-undone-button.no-action-link-styles=Msg.ToDo
                         BUTTON.grey-button.blue-on-active.done-undone-button.pressed=Msg.All
             .right
                 .notification-btn-container
