fixed for CHLK-2647 Attendance All > Remove "Parent info" button + 2 more.. Attendance > All : Student grid on bottom
Remove the "Parent Info" button from the tooltip - 1.png
Make student pictures clickable link to their profiles
Make student name in tooltip a clickable link to their profiles

--- a/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
@@ -33,13 +33,14 @@ mixin AbsentLatePage(data, header)
                                 .chlk-pop-up-container.popup-top
                                     .pop-up-triangle
                                     .info-container
-                                        h1=student.getDisplayName()
+                                        +ActionLink('user', 'infoByRole', student.getId(), 'student')
+                                            h1=student.getDisplayName()
                                         .stats
                                             each stat in info.getStatByClass()
                                                 p #{stat.getClassName()}: #{stat.getValue()}
-                                        a(href="javascript:").grey-button=Msg.Parent_info
                                 .img-container
-                                    +PersonImg(student, 128)
+                                    +ActionLink('user', 'infoByRole', student.getId(), 'student')
+                                        +PersonImg(student, 128)
 
 .attendance-summary
     topData = self.getTopData();
