--- a/Chalkable.Web/assets/jade/controls/feed-item.jade
+++ b/Chalkable.Web/assets/jade/controls/feed-item.jade
@@ -23,7 +23,7 @@ mixin FeedItem(item, noDisabled)
                     )
             .bullet
                 +ActionLink('announcement', 'star', item.getId().valueOf(), !item.isComplete())(
-                    data-tooltip=item.isComplete() ? Msg.Mark_as_ToDo : Msg.Mark_as_done
+                    data-tooltip=item.isComplete() ? Msg.Done : Msg.ToDo
                 ).star
                 +ActionLink('announcement', 'view', item.getId())(class = !noDisabled ? 'disabled' : '').d-b.t-d.not-blue.announcement-link
                     .item-type
