fixed for Teacher. People. "Up" button will be situated wrong

--- a/Chalkable.Web/assets/sass/partials/controls/_grid.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_grid.scss
@@ -73,8 +73,8 @@ BODY {
   .load-all-popup{
     width: 210px;
     height: 93px;
-    left: 950px;
-    top: 500px;
+    right: 115px;
+    bottom: 90px;
     text-align: center;
 
     .outer-container.new-popup{
