fixed for Teacher. When teacher first time clicks the button "New item" he won't see tooltip "choose a class"

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -41,3 +41,4 @@ classes = self.getClassInfo() ? self.getClassInfo().getTypesByClass() : []
             selectedItemId=topData.getSelectedItemId(),
             pressAfterClick=true
         ).classes-bar
+        .choose-class(class=(classId ? 'x-hidden' : ''))
