--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -10,6 +10,12 @@ BODY {
               }
             }
 
+            .empty-grade-form{
+              .comment-grade{
+                display: none;
+              }
+            }
+
             .class-grading{
               .mps-container .marking-period-container .mp-data .ann-types-container {
                 margin-bottom: -30px;
